[FLINK-22054][dist] Suppress the verbose log in kubernetes informer

--- a/flink-dist/src/main/flink-bin/conf/log4j-session.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j-session.properties
@@ -40,3 +40,7 @@ logger.runtimeutils.name= org.apache.flink.runtime.util.ZooKeeperUtils
 logger.runtimeutils.level = WARN
 logger.runtimeleader.name = org.apache.flink.runtime.leaderretrieval.ZooKeeperLeaderRetrievalDriver
 logger.runtimeleader.level = WARN
+
+# Suppress the verbose log in kubernetes informer
+logger.kube.name = io.fabric8.kubernetes.client.informers.cache.ReflectorWatcher
+logger.kube.level = ERROR
