--- a/flink-dist/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j.properties
@@ -59,3 +59,7 @@ appender.main.strategy.max = ${env:MAX_LOG_FILE_NUMBER:-10}
 # Suppress the irrelevant (wrong) warnings from the Netty channel handler
 logger.netty.name = org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline
 logger.netty.level = OFF
+
+# Suppress the verbose log in kubernetes informer
+logger.kube.name = io.fabric8.kubernetes.client.informers.cache.ReflectorWatcher
+logger.kube.level = ERROR
